<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        app:srcCompat="@drawable/boxregist" />

    <EditText
        android:id="@+id/edemail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/outline"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/masukan_email"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvemail"
        app:layout_constraintTop_toBottomOf="@+id/tvemail" />

    <TextView
        android:id="@+id/textregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="141dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/outline"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edemail"
        app:layout_constraintEnd_toEndOf="@+id/edfullname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edfullname"
        app:layout_constraintTop_toBottomOf="@+id/edfullname"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edemail"
        app:layout_constraintTop_toBottomOf="@+id/edemail" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/tvregist"
        app:layout_constraintStart_toStartOf="@+id/tvregist"
        app:layout_constraintTop_toBottomOf="@+id/tvregist" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/edpassword"
        app:layout_constraintStart_toStartOf="@+id/edpassword"
        app:layout_constraintTop_toBottomOf="@+id/edpassword" />

    <TextView
        android:id="@+id/tvregist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/not_have_account"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnregister"
        app:layout_constraintStart_toStartOf="@+id/btnregister"
        app:layout_constraintTop_toBottomOf="@+id/btnregister" />

    <EditText
        android:id="@+id/edfullname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/outline"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/masukan_nama_lengkap"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvuser"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/tvuser"
        app:layout_constraintTop_toBottomOf="@+id/tvuser" />

    <TextView
        android:id="@+id/tvuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/masukan_nama_lengkap"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textregister" />

</androidx.constraintlayout.widget.ConstraintLayout>